--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +17,53 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* h1 {
+  margin: 0px;
+  text-decoration: none;
+  cursor: "pointer";
+} */
+
+a {
+  text-decoration: none;
+}
+
+/* Link p {
+  text-decoration: none;
+} */
+
+.header {
+  background-color: rgb(113, 187, 230);
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* .main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.movie {
+  color: black;
+  background-color: #e3e7ee;
+  border: 1px solid gray;
+  padding: 3px;
+  font-weight: bold;
+  text-align: start;
+  width: 22%;
+  margin-top: 14px;
+}
+
+.movie img {
+  height: 250px;
+  width: 100%;
+} */
+
+.data {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  /* padding: 5px; */
 }
